[package]
name = "cordyceps_simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "*"
plotters = "*"
rand = "*"
plotters-piston = "*"
piston_window = "*"
glutin = "0.31.2"
nannou = "0.18"  